2020-07-17  Charlie Zender  <zender@uci.edu>

	* Adjust diagnostic count (cnt) for interleaving (do not divide span by stride)

	* ncrcat interleaving invoked as either stride-only and stride-ssc work identically for multiple files

	* Merge Kouznetsov's implementation of Milan Klower's integer-math-only version of nearest neighbor rounding into the new default bit-adjustment-algorithm (BAA) #5

2020-07-16  Charlie Zender  <zender@uci.edu>

	* ncra/ncrcat: Implement stride resets over interleaved dimension, works for multiple files!

2020-07-15  Charlie Zender  <zender@uci.edu>

	* Change default Bit-Adjustment Algorithm from Bit Grooming to Bit Rounding

	* Merge Kouznetsov's bit-adjustment-algorithm (BAA) #6 half-shaving quantization algorithmw

2020-07-13  Charlie Zender  <zender@uci.edu>

	* Implement double precision version of Kouznetsov's round-to-nearest quantization

2020-07-11  Charlie Zender  <zender@uci.edu>

	* Merge Rostislav Kouznetsov (rkouznetsov) bit-adjustment-algorithm (BAA) #5 bit-rounding quantization algorithm

2020-07-09  Charlie Zender  <zender@uci.edu>

	* Add flg_ilv to lmt_sct so srt and end can depend on srd

	* Clean-up and move nco_rgd_arr_lst_free() and nco_rgd_arr_lst_chk() to nco_lst_utl.c/h

	* ncra/ncrcat add --ilv, --interleave_output flags and stubs to interleave output data

2020-07-08  Charlie Zender  <zender@uci.edu>

	* NCO 4.9.4-alpha06 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.4-alpha06: Missoula';git push
 	git tag -a 4.9.4-alpha06 -m 'all: NC_SHARE on read; nces -w wgt; ncks revert nc_inq_var_filter() workaround';git push --tags

	* Add per-file weight logic to nces, works with command-line weights not wgt_nm weights

	* Add 'if(SHARE_OPEN) md_open=md_open|NC_SHARE;' to all main.c files

2020-07-01  Charlie Zender  <zender@uci.edu>

	* Dennis Heimbigner reverted 4.7.4 nc_inq_var_filter() change in 4.8.0-develop, so revert workaround in nco_prn_att()

2020-06-30  Charlie Zender  <zender@uci.edu>
