@@ -1,3 +1,7 @@
+2020-07-19  Charlie Zender  <zender@uci.edu>
+
+	* ncra interleave (flg_ilv) implies multi-record-output (flg_mro)
+
 2020-07-17  Charlie Zender  <zender@uci.edu>
 
 	* Adjust diagnostic count (cnt) for interleaving (do not divide span by stride)
